@@ -1,7 +1,13 @@
 NOCC 1.7  ?? ??, ??
 
+  Bugs
+    * Bug #2009567 : Cannot delete one mail (Arnaud Boudou).
+
   Patches
     * Patch #2010065 : Optimize regexs for remote image security (Tim Gerundt).
+
+  Misc
+    * Fix some bugs on multiple mails actions (Arnaud Boudou).
 
 NOCC 1.6  July 01, 2008
 
